# allure-docker-api/static/swagger/swagger.json
@@ -349,80 +349,6 @@
             }
          }
       },
-      "/emailable-report/render":{
-         "get":{
-            "tags":[
-               "Action"
-            ],
-            "summary":"Render emailable Allure report",
-            "parameters":[
-               {
-                  "in":"query",
-                  "name":"project_id",
-                  "schema":{
-                     "type":"string"
-                  }
-               }
-            ],
-            "responses":{
-               "200":{
-                  "description":"OK",
-                  "schema":{
-                     "$ref":"#/components/schemas/response"
-                  }
-               },
-               "400":{
-                  "description":"BAD_REQUEST",
-                  "schema":{
-                     "$ref":"#/components/schemas/response"
-                  }
-               },
-               "404":{
-                  "description":"NOT_FOUND",
-                  "schema":{
-                     "$ref":"#/components/schemas/response"
-                  }
-               }
-            }
-         }
-      },
-      "/emailable-report/export":{
-         "get":{
-            "tags":[
-               "Action"
-            ],
-            "summary":"Export emailable Allure report",
-            "parameters":[
-               {
-                  "in":"query",
-                  "name":"project_id",
-                  "schema":{
-                     "type":"string"
-                  }
-               }
-            ],
-            "responses":{
-               "200":{
-                  "description":"OK",
-                  "schema":{
-                     "$ref":"#/components/schemas/response"
-                  }
-               },
-               "400":{
-                  "description":"BAD_REQUEST",
-                  "schema":{
-                     "$ref":"#/components/schemas/response"
-                  }
-               },
-               "404":{
-                  "description":"NOT_FOUND",
-                  "schema":{
-                     "$ref":"#/components/schemas/response"
-                  }
-               }
-            }
-         }
-      },
       "/report/export":{
          "get":{
             "tags":[
